<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="advance_balance_subtitle">Prepaid advance</string>
    <string name="advance_balance_title">Advance Balance</string>
    <string name="agree_to_terms">Before continuing, you agree to our</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonymous_call_subtitle">Hide number</string>
    <string name="anonymous_call_title">Anonymous</string>
    <string name="app_lock_description">Require fingerprint, face or screen lock to open the app.</string>
    <string name="app_lock_locked">UtilEs is locked</string>
    <string name="app_lock_prompt_subtitle">Use your fingerprint, face or screen lock</string>
    <string name="app_lock_prompt_title">Unlock UtilEs</string>
    <string name="app_lock_title">App lock</string>
    <string name="app_lock_unavailable">Set up a screen lock or fingerprint on your phone first</string>
    <string name="app_lock_unlock">Unlock</string>
    <string name="app_name">UtilEs</string>
    <string name="app_update_action_download">Download</string>
    <string name="app_update_action_visit">Visit</string>
    <string name="app_update_channel_description">Notifies when a new version of UtilEs is available</string>
    <string name="app_update_channel_name">App updates</string>
    <string name="app_update_content">UtilEs %1$s is ready to download</string>
    <string name="app_update_content_with_size">UtilEs %1$s (%2$s) is ready to download</string>
    <string name="app_update_download_description">Downloading the latest version</string>
    <string name="app_update_download_title">UtilEs APK</string>
    <string name="app_update_notification_title">New version available</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_coupon">Apply</string>
    <string name="asterisco_99_history_empty">No recent calls with *99</string>
    <string name="asterisco_99_history_title">Asterisco 99 - Recent</string>
    <string name="asterisco_99_subtitle">Free of charge</string>
    <string name="asterisco_99_title">Asterisco 99</string>
    <string name="available_label">Available</string>
    <string name="ayuda">Help</string>
    <string name="back">Back</string>
    <string name="back_button_content_description">Back</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="balance_info_dialog_title">Show in this column</string>
    <string name="balance_label">BALANCE</string>
    <string name="balance_notification_channel_description">Permanent notification with Saldo, Datos, SMS and Voz</string>
    <string name="balance_notification_channel_name">Balance notification</string>
    <string name="balance_notification_description">Keep a permanent notification with your last known Saldo, Datos, SMS and Voz values. Updates automatically when you refresh them via USSD.</string>
    <string name="balance_notification_title">Balance in notification bar</string>
    <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
    <string name="biometric_prompt_message">Use your biometric to continue</string>
    <string name="body_apn_nauta_config">"1. Settings
2. Connections and networks
3. Mobile Networks
4. Access Point Names
5. Menu->New APN
Name: Nauta
APN: nauta
6. Menu->Save.
7. Check that the APN is selected and exit
8. Activate mobile data and use."</string>
    <string name="body_consumption_rate_description">To protect your main balance you can enable/disable the consumption rate. By default, when installing the application we assume the option is enabled. If not, press the button below to match the current state. Remember that if you have the consumption rate disabled and do not have a messaging plan, even if you have balance you will not be able to access the service, such as Nauta mail.</string>
    <string name="body_differentiated_rate_desc">Differentiated rate for prepaid users in and from a zone with a special rate</string>
    <string name="body_differentiated_rate_schedule">"From 7:00 AM to 10:59 PM: 5 CUP/min
From 11:00 PM to 6:59 AM: 2.50 CUP/min."</string>
    <string name="body_email_client_config">"1. Mail credentials
 - Email account: youruser@nauta.cu
 - User: xxx.yyy@nauta.cu
 - Password: ******
2. Server configuration:
 - SMTP server: smtp.nauta.cu, port: 25, authentication (YES)
 - IMAP4 server: imap.nauta.cu, port: 143
 - POP3 server: pop.nauta.cu, port: 110
 -Press next and wait for it to finish to finalize the account -Go to the mail client settings and set the sync frequency to never to avoid accidental balance loss.
3. Browser access configuration:
https://webmail.nauta.cu"</string>
    <string name="body_how_to_connect_wifi">"1. In coverage areas, activate the WIFI wireless signal.
2. Select the WIFI_ETECSA access point.
3. Open the browser (Chrome or Firefox), when trying to access a page, the Nauta authentication page will be displayed.
4. Enter the Nauta account access data:
 -User including the domain @nauta.com.cu or @nauta.co.cu, e.g. (youruser@nauta.co.cu).
 -Password.

You are advised to have DHCP enabled and disable Proxy use. When you finish browsing, disconnect your device by deactivating the wifi signal.

Manage your account on the user portal. Free of charge, access http://www.portal.nauta.cu connected via WIFI_ETECSA or through mobile data using APN Nauta"</string>
    <string name="body_imei_info">Send a free SMS to 2266 with the first 8 numbers of the IMEI (*#06#) and you will receive a text message confirming whether your device supports the 900 MHz frequency to operate on the ETECSA 3G network</string>
    <string name="body_mobile_consumption_note">Mobile consumption based on consumption rate according to current tariff.</string>
    <string name="body_permission_calls">To show your call history, grant access to the call log.</string>
    <string name="body_permission_sms">To show your messages and transfers, grant access to SMS.</string>
    <string name="body_required_permissions">Phone state and Location permissions are needed to read GSM/LTE cell information.</string>
    <string name="bonus_label">BONUS</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_authenticate">AUTHENTICATE</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear_date">Clear</string>
    <string name="button_close">Close</string>
    <string name="button_close_session">Sign out</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_disable">Disable</string>
    <string name="button_donate">DONATE</string>
    <string name="button_enable">Enable</string>
    <string name="button_end_date">End Date</string>
    <string name="button_get_numbers_and_sync">GET NUMBERS AND SYNC</string>
    <string name="button_grant_permission">Grant permission</string>
    <string name="button_grant_permissions">Grant permissions</string>
    <string name="button_hire">HIRE</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_remove">Remove</string>
    <string name="button_schedule">Schedule</string>
    <string name="button_send_sms">Send SMS</string>
    <string name="button_start_date">Start Date</string>
    <string name="button_start_test">Start</string>
    <string name="button_stop_schedule">Stop</string>
    <string name="button_stop_test">Stop</string>
    <string name="calendar_dialog_title">Expiry calendar</string>
    <string name="calendar_empty">No upcoming expirations</string>
    <string name="calendar_legend_today">Today · %s</string>
    <string name="call_alert_action_call">Call</string>
    <string name="call_alert_action_sms">SMS</string>
    <string name="call_alert_all">All incoming calls</string>
    <string name="call_alert_channel_description">Shows the caller alert over the lock screen</string>
    <string name="call_alert_channel_name">Incoming call alerts</string>
    <string name="notification_label_datos">Datos</string>
    <string name="notification_label_saldo">Saldo</string>
    <string name="notification_label_sms">SMS</string>
    <string name="notification_label_voz">Voz</string>
    <string name="shortcut_datos_long_label">Check data plan</string>
    <string name="shortcut_datos_short_label">Data</string>
    <string name="shortcut_saldo_long_label">Check balance</string>
    <string name="shortcut_saldo_short_label">Balance</string>
    <string name="shortcut_sms_long_label">Check SMS plan</string>
    <string name="shortcut_sms_short_label">SMS</string>
    <string name="shortcut_voz_long_label">Check voice plan</string>
    <string name="shortcut_voz_short_label">Voice</string>
    <string name="widget_datos_label">Data</string>
    <string name="widget_datos_placeholder">0.00 MB</string>
    <string name="widget_saldo_label">Balance</string>
    <string name="widget_sms_label">SMS</string>
    <string name="widget_sms_placeholder">--</string>
    <string name="widget_value_placeholder">$0.00</string>
    <string name="widget_voz_label">Voice</string>
    <string name="widget_voz_placeholder">00:00:00</string>
</resources>