<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/notification_saldo_column" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_notification_saldo" android:tint="#ff4caf50" android:contentDescription="@string/notification_label_saldo" android:layout_marginEnd="4.0dip" />
        <TextView android:textSize="12.0sp" android:id="@id/notification_saldo_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:maxLines="1" style="@style/TextAppearance.Compat.Notification.Title" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/notification_datos_column" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_notification_datos" android:tint="#ff2196f3" android:contentDescription="@string/notification_label_datos" android:layout_marginEnd="4.0dip" />
        <TextView android:textSize="12.0sp" android:id="@id/notification_datos_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:maxLines="1" style="@style/TextAppearance.Compat.Notification.Title" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/notification_sms_column" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_notification_sms" android:tint="#ffff9800" android:contentDescription="@string/notification_label_sms" android:layout_marginEnd="4.0dip" />
        <TextView android:textSize="12.0sp" android:id="@id/notification_sms_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:maxLines="1" style="@style/TextAppearance.Compat.Notification.Title" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/notification_voz_column" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_notification_voz" android:tint="#ff9c27b0" android:contentDescription="@string/notification_label_voz" android:layout_marginEnd="4.0dip" />
        <TextView android:textSize="12.0sp" android:id="@id/notification_voz_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:maxLines="1" style="@style/TextAppearance.Compat.Notification.Title" />
    </LinearLayout>
</LinearLayout>